syntax = "proto3";
//import "google/protobuf/timestamp.proto";
import "status.proto";
option go_package = "proto";


service Judgements {
  rpc SubmitJudgement(SubmitJudgementRequest) returns (SubmitJudgementResponse);
  rpc FetchHashFile (FetchFileHashRequest) returns (FetchFileHashResponse);
  rpc FetchFile (FetchJudgeFileRequest) returns (FetchJudgeFileResponse);
  rpc FetchJudgement (FetchJudgementRequest) returns (FetchJudgementResponse);
  rpc ReturnJudgement (ReturnJudgementRequest) returns (ReturnJudgementResponse);
  rpc ListJudgements(ListRequest) returns (ListResponse);
}
message ListRequest {
  string user_id = 1;
  string problem_id = 2;
  uint64 submission_id = 3;
  uint64 judgement_id = 4;
}
message ListResponse {}

message SubmitJudgementRequest {
  uint64 submission_id = 1;
  string public_space = 2;
  string private_space = 3;
  string user_space = 4;
  string test_case = 5;
}

message SubmitJudgementResponse {
  Status status = 1;
  uint64 score = 2;
}


message FetchFileHashRequest {
  string problem_id = 1;
  string filename = 2;
}

message FetchFileHashResponse {
  Status status = 1;
  string sha1 = 2;
}

message FetchJudgeFileRequest {
  string token = 1;
  string space = 2;
  string filename = 3;
}

message FetchJudgeFileResponse {
  Status status = 1;
  bytes file = 2;
  string sha1 = 3;
}

message FetchJudgementRequest {
  uint64 test_point = 1;
  uint64 time_limit = 2;
  uint64 memory_limit = 3;
}


message FetchJudgementResponse {
  string token = 1;
  string test_case = 2;

  uint64 time_limit = 3;
  uint64 memory_limit = 4;

  string file_io_input_name = 5;
  string file_io_output_name = 6;
}


message ReturnJudgementRequest {
  string token = 1;
  Status status = 2;
  uint64 score = 3;
  string msg = 4;
}

message ReturnJudgementResponse {
  Status status = 1;
}
